test/compile_errors/err_workspace_ephemeral_struct_field.w
//! expect-error: ephemeral type 'Workspace' cannot be stored in non-ephemeral struct

use std.build

type LeakedWorkspace {
    workspace: Workspace,
}

fn main:
    print("unreachable")
